--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                 href="./index.html"
                 target="_self"
                 rel="noreferrer noopener"
-                class="header-link link current"
+                class="header-link link"
                 >Studio</a
               >
             </li>
@@ -51,7 +51,7 @@
                 href="#"
                 target="_self"
                 rel="noreferrer noopener"
-                class="header-link link"
+                class="header-link link current header-link-current"
                 >Portfolio</a
               >
             </li>
@@ -112,15 +112,23 @@
             <li class="item-port">
               <a
                 href="#"
-                class="link-port link"
+                class="link-port link item-port-hover"
                 target="_self"
                 rel="noreferrer noopener"
-                ><img
-                  class="port-img"
-                  src="./images/portfolio/1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                />
+              >
+                <div class="img-text-wrapper">
+                  <img
+                    class="port-img"
+                    src="./images/portfolio/1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+                  <p class="item-p-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="description-port">
                   <h2 class="item-title-port">Banking App Interface Concept</h2>
                   <p class="item-text-port">App</p>
@@ -130,16 +138,22 @@
             <li class="item-port">
               <a
                 href="#"
-                class="link-port link"
+                class="link-port link item-port-hover"
                 target="_self"
                 rel="noreferrer noopener"
-              >
-                <img
-                  class="port-img"
-                  src="./images/portfolio/2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+                ><div class="img-text-wrapper">
+                  <img
+                    class="port-img"
+                    src="./images/portfolio/2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <p class="item-p-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="description-port">
                   <h2 class="item-title-port">Cashless Payment</h2>
                   <p class="item-text-port">Marketing</p>
@@ -149,135 +163,176 @@
             <li class="item-port">
               <a
                 href="#"
-                class="link-port link"
+                class="link-port link item-port-hover"
                 target="_self"
                 rel="noreferrer noopener"
-              >
-                <img
-                  class="port-img"
-                  src="./images/portfolio/3.jpg"
-                  alt="Meditaion App"
-                  width="360"
-                />
-                <div class="description-port">
-                <h2 class="item-title-port">Meditaion App</h2>
-                <p class="item-text-port">App</p>
+                ><div class="img-text-wrapper">
+                  <img
+                    class="port-img"
+                    src="./images/portfolio/3.jpg"
+                    alt="Meditaion App"
+                    width="360"
+                  />
+                  <p class="item-p-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
-                </a>
-              </li>
-                </li>
+                <div class="description-port">
+                  <h2 class="item-title-port">Meditaion App</h2>
+                  <p class="item-text-port">App</p>
+                </div>
+              </a>
             </li>
+
             <li class="item-port">
               <a
                 href="#"
-                class="link-port link"
+                class="link-port link item-port-hover"
                 target="_self"
                 rel="noreferrer noopener"
-              >
-                <img
-                  class="port-img"
-                  src="./images/portfolio/4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
+                ><div class="img-text-wrapper">
+                  <img
+                    class="port-img"
+                    src="./images/portfolio/4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <p class="item-p-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="description-port">
-                <h2 class="item-title-port">Taxi Service</h2>
-                <p class="item-text-port">Marketing</p>
+                  <h2 class="item-title-port">Taxi Service</h2>
+                  <p class="item-text-port">Marketing</p>
                 </div>
               </a>
             </li>
             <li class="item-port">
               <a
                 href="#"
-                class="link-port link"
+                class="link-port link item-port-hover"
                 target="_self"
                 rel="noreferrer noopener"
-              >
-                <img
-                  class="port-img"
-                  src="./images/portfolio/5.jpg"
-                  alt="Illustrations"
-                  width="360"
-                />
+                ><div class="img-text-wrapper">
+                  <img
+                    class="port-img"
+                    src="./images/portfolio/5.jpg"
+                    alt="Illustrations"
+                    width="360"
+                  />
+                  <p class="item-p-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="description-port">
-                <h2 class="item-title-port">Screen Illustrations</h2>
-                <p class="item-text-port">Design</p>
+                  <h2 class="item-title-port">Screen Illustrations</h2>
+                  <p class="item-text-port">Design</p>
                 </div>
               </a>
             </li>
             <li class="item-port">
               <a
                 href="#"
-                class="link-port link"
+                class="link-port link item-port-hover"
                 target="_self"
                 rel="noreferrer noopener"
-              >
-                <img
-                  class="port-img"
-                  src="./images/portfolio/6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                ><div class="img-text-wrapper">
+                  <img
+                    class="port-img"
+                    src="./images/portfolio/6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <p class="item-p-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="description-port">
-                <h2 class="item-title-port">Online Courses</h2>
-                <p class="item-text-port">Marketing</p>
+                  <h2 class="item-title-port">Online Courses</h2>
+                  <p class="item-text-port">Marketing</p>
                 </div>
               </a>
             </li>
             <li class="item-port">
               <a
                 href="#"
-                class="link-port link"
+                class="link-port link item-port-hover"
                 target="_self"
                 rel="noreferrer noopener"
-              >
-                <img
-                  class="port-img"
-                  src="./images/portfolio/7.jpg"
-                  alt="Instagram"
-                  width="360"
-                />
+                ><div class="img-text-wrapper">
+                  <img
+                    class="port-img"
+                    src="./images/portfolio/7.jpg"
+                    alt="Instagram"
+                    width="360"
+                  />
+                  <p class="item-p-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="description-port">
-                <h2 class="item-title-port">Instagram Stories Concept</h2>
-                <p class="item-text-port">Design</p>
+                  <h2 class="item-title-port">Instagram Stories Concept</h2>
+                  <p class="item-text-port">Design</p>
                 </div>
               </a>
             </li>
             <li class="item-port">
               <a
                 href="#"
-                class="link-port link"
+                class="link-port link item-port-hover"
                 target="_self"
                 rel="noreferrer noopener"
-              >
-                <img
-                  class="port-img"
-                  src="./images/portfolio/8.jpg"
-                  alt="Food"
-                  width="360"
-                />
+                ><div class="img-text-wrapper">
+                  <img
+                    class="port-img"
+                    src="./images/portfolio/8.jpg"
+                    alt="Food"
+                    width="360"
+                  />
+                  <p class="item-p-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="description-port">
-                <h2 class="item-title-port">Organic Food</h2>
-                <p class="item-text-port">Web Site</p>
+                  <h2 class="item-title-port">Organic Food</h2>
+                  <p class="item-text-port">Web Site</p>
                 </div>
               </a>
             </li>
             <li class="item-port">
               <a
                 href="#"
-                class="link-port link"
+                class="link-port link item-port-hover"
                 target="_self"
                 rel="noreferrer noopener"
-              >
-                <img
-                  class="port-img"
-                  src="./images/portfolio/9.jpg"
-                  alt="Coffe"
-                  width="360"
-                />
+                ><div class="img-text-wrapper">
+                  <img
+                    class="port-img"
+                    src="./images/portfolio/9.jpg"
+                    alt="Coffe"
+                    width="360"
+                  />
+                  <p class="item-p-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="description-port">
-                <h2 class="item-title-port">Fresh Coffe</h2>
-                <p class="item-text-port">Web Site</p>
+                  <h2 class="item-title-port">Fresh Coffe</h2>
+                  <p class="item-text-port">Web Site</p>
                 </div>
               </a>
             </li>
@@ -286,7 +341,7 @@
       </section>
     </main>
     <!--footer content-->
-     <footer class="footer">
+    <footer class="footer">
       <div class="footer-container container">
         <div class="footer-info">
           <div class="footer-info-left">
@@ -361,5 +416,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
